--- a/made_with_ml/pyproject.toml
+++ b/made_with_ml/pyproject.toml
@@ -11,7 +11,7 @@ python = ">=3.11,<3.13"
 numpy = "^1.26.1"
 pandas = "^2.1.2"
 matplotlib = "^3.8.1"
-scikit-learn = "^1.3.2"
+torch = "^2.1.0"
 
 
 [build-system]
