--- a/made_with_ml/pyproject.toml
+++ b/made_with_ml/pyproject.toml
@@ -12,6 +12,10 @@ numpy = "^1.26.1"
 pandas = "^2.1.2"
 matplotlib = "^3.8.1"
 torch = "^2.1.0"
+ipykernel = "^6.26.0"
+torchvision = "^0.16.0"
+torchaudio = "^2.1.0"
+scikit-learn = "^1.3.2"
 
 
 [build-system]
